# eml_transformer

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_for_windows.txt
configs/: dev.yaml
docs/: adding_new_source.md  hpc_getting_started.md  iem_afos_source.md  ingestion_pipeline.md  sample_prompts.md  testing_principles.md
notebooks/: MISO_historical_alerts.ipynb  data_inspection.ipynb  gdelt_data.ipynb  gdelt_scraping.ipynb  nws_text_data.ipynb  text_embeddings.ipynb
scripts/: backfill_newsapi.py  explore_gdelt.py  explore_iem_afos.py  nvidia_endpoints.py  run.sh  test_hpc.sh
src/eml_text_pipeline/: cli.py
src/eml_text_pipeline/ingestion/: base.py  miso.py  newsapi.py  weather_alerts.py
src/eml_text_pipeline/storage/: paths.py
src/eml_transformer/: cli.py  logging.py
src/eml_transformer/extraction/: scraper.py
src/eml_transformer/ingestion/: base.py  schema.py
src/eml_transformer/pipelines/: backfill_pipeline.py  embedding_pipeline.py  ingestion_pipeline.py  scraping_pipeline.py  standardization_pipeline.py
src/eml_transformer/storage/: paths.py  storage.py
src/eml_transformer/text_processing/: embeddings.py
src/eml_transformer/utils/: config.py  dates.py
tests/: conftest.py  helpers.py
tests/extraction/: test_scraper.py
tests/ingestion/: test_schema.py
tests/ingestion/sources/: test_gdelt_parsing.py  test_gdelt_requests.py  test_gdelt_standardization.py  (+7 more)
tests/pipelines/: test_backfill_pipeline.py  test_embedding_pipeline.py  test_ingestion_pipeline.py  test_scraping_pipeline.py  test_standardization_pipeline.py
tests/text_processing/: test_cleaning.py
(+45 files in other folders)
