[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eml_text_pipeline"
version = "0.1.0"
description = "Incorporating textual data and transformers into energy load forecasting"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]