[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eml_transformer"
version = "0.1.0"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "pandas",
    "playwright",
    "pyarrow",
    "python-dateutil",
    "python-dotenv",
    "pyyaml",
    "requests",
    "tqdm",
    "trafilatura",
    "typer",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers",
    "torchvision"
]

[dependency-groups]
dev = [
    "pytest",
]

notebook = [
    "ipykernel",
    "jupyterlab",
    "matplotlib",
    "plotly",
    "seaborn",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
eml_transformer = "eml_transformer.cli:app"
